# cliph

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  environnement.txt
crates/cliph-core/: Cargo.toml
crates/cliph-core/data/: catalog-versions.txt  emoji.tsv  symbols.tsv
crates/cliph-core/src/: classifier.rs  lib.rs  quick_insert.rs
crates/cliph-storage/: Cargo.toml
crates/cliph-storage/migrations/: 0001_initial.sql  0002_rich_text.sql  0003_image_history.sql  0004_classification_metadata.sql  0005_multiformat_payloads.sql  0006_file_history.sql
crates/cliph-storage/src/: lib.rs  lib.rs.backup-step-13
crates/cliph-ui/: Cargo.toml
crates/cliph-ui/src/: installer.rs  main.rs  main.rs.backup-before-context-fix  main.rs.backup-step-13  main.rs.backup-step-14b
docs/releases/: v0.1.0.md  v0.1.1.md
packaging/containers/: build-debian-12.sh  build-ubuntu-22.04.sh  debian-12.Dockerfile  ubuntu-22.04.Dockerfile
packaging/debian/: README.md  build-deb.sh  changelog  cliph.1  copyright  install-cliph.sh
packaging/flatpak/: build-flatpak.sh
tools/: generate_unicode_catalog.py
