[workspace]
resolver = "3"
members = [
    "crates/cliph-core",
    "crates/cliph-storage",
    "crates/cliph-ui",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.97"
license = "GPL-3.0-or-later"
authors = ["ClipH Contributors"]

[workspace.dependencies]
adw = { package = "libadwaita", version = "0.9.2" }
gtk = { package = "gtk4", version = "0.11.4", features = ["v4_6"] }
directories = "6.0.0"
rusqlite = { version = "0.40.1", default-features = false, features = ["bundled"] }
sha2 = "0.11.0"
ashpd = { version = "0.13.12", default-features = false, features = ["async-io", "global_shortcuts"] }
futures-util = "0.3.32"
