[package]
name = "cliph-ui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[features]
default = ["gtk-v4-8"]
gtk-v4-8 = ["gtk/v4_8"]

[dependencies]
adw.workspace = true
gtk.workspace = true
cliph-core = { path = "../cliph-core" }
cliph-storage = { path = "../cliph-storage" }
ashpd.workspace = true
futures-util.workspace = true
