[package]
name = "cliph-ui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
adw.workspace = true
ashpd.workspace = true
futures-util.workspace = true
async-channel.workspace = true
async-io.workspace = true
gtk.workspace = true
cliph-core = { path = "../cliph-core" }
cliph-storage = { path = "../cliph-storage" }
